// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlternateGenreField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "Conversation",
        "value": "453663",
      },
      Object {
        "text": "Culture, stories, people",
        "value": "453664",
      },
      Object {
        "text": "Session organisation",
        "value": "453665",
      },
      Object {
        "text": "Song",
        "value": "453666",
      },
      Object {
        "text": "Traditional language sentence",
        "value": "453667",
      },
      Object {
        "text": "Traditional language word",
        "value": "453668",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value={Array []}
/>
`;

exports[`AlternateGenreField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "Conversation",
        "value": "453663",
      },
      Object {
        "text": "Culture, stories, people",
        "value": "453664",
      },
      Object {
        "text": "Session organisation",
        "value": "453665",
      },
      Object {
        "text": "Song",
        "value": "453666",
      },
      Object {
        "text": "Traditional language sentence",
        "value": "453667",
      },
      Object {
        "text": "Traditional language word",
        "value": "453668",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`AlternateGenreField component should render when given a default value field props 1`] = `
<GenericSelectField
  defaultValue="afr"
  error={false}
  errorText=""
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "Conversation",
        "value": "453663",
      },
      Object {
        "text": "Culture, stories, people",
        "value": "453664",
      },
      Object {
        "text": "Session organisation",
        "value": "453665",
      },
      Object {
        "text": "Song",
        "value": "453666",
      },
      Object {
        "text": "Traditional language sentence",
        "value": "453667",
      },
      Object {
        "text": "Traditional language word",
        "value": "453668",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`AlternateGenreField component should render with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "Conversation",
        "value": "453663",
      },
      Object {
        "text": "Culture, stories, people",
        "value": "453664",
      },
      Object {
        "text": "Session organisation",
        "value": "453665",
      },
      Object {
        "text": "Song",
        "value": "453666",
      },
      Object {
        "text": "Traditional language sentence",
        "value": "453667",
      },
      Object {
        "text": "Traditional language word",
        "value": "453668",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
